crates/codegen/language/tests/src/fail/references/disabled_too_late/test.stderr
error: Parent scope is only enabled in '2.0.0..3.0.0'.
  --> src/fail/references/disabled_too_late/test.rs:27:79
   |
27 |                     fields = (field_1 = Optional(reference = Three, enabled = Till("4.0.0")))
   |                                                                               ^^^^
